--- a/app/partials/supply_userinfo.html
+++ b/app/partials/supply_userinfo.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/recognizee_first.css?rev=ac540e4aceeaecc54edc820de0ebcda3">
+<link rel="stylesheet" href="/css/recognizee_first.css?rev=34ddcb5204fb6bf1ce10353ad4e3149b">
 <div class="recognizee_first_ctrl">
 	<div class="rgn_head">选择被保险人</div>
 	<div class="choose">
@@ -100,7 +100,7 @@
                   </select>
        			</div>
 				<div class="line-box noBor">
-					<div class="lable">身份证号</div><input type="text" onfocus="this.placeholder=''" onblur="this.placeholder='请输入投保人的证件号'" placeholder="请输入投保人的证件号"  ng-model="social_id" name="social_id"  required  ng-minlength="4" ng-maxlength="18" >
+					<div class="lable">证件号码</div><input type="text" onfocus="this.placeholder=''" onblur="this.placeholder='请输入投保人的证件号'" placeholder="请输入投保人的证件号"  ng-model="social_id" name="social_id"  required  ng-minlength="4" ng-maxlength="18" >
 				</div>
 				<div class="cell"  style="color:red" 
          				   ng-show="userform.social_id.$dirty && userform.social_id.$invalid ">
