--- a/app/partials/update_add_contact.html
+++ b/app/partials/update_add_contact.html
@@ -28,7 +28,7 @@
 		</ul>
 			<div class="bottom_line">
 				<ul>
-					<li>身份证号</li><input type="text"  onclick="_hmt.push(['_trackEvent', 'update_add_contact', 'update_add_contact_id'])" ng-model="social_id" name="social_id" onfocus="this.placeholder=''" onblur="this.placeholder='请输入投保人的证件号'" placeholder="请输入被保人证件号" required  ng-minlength="4" ng-maxlength="18" >
+					<li>证件号码</li><input type="text"  onclick="_hmt.push(['_trackEvent', 'update_add_contact', 'update_add_contact_id'])" ng-model="social_id" name="social_id" onfocus="this.placeholder=''" onblur="this.placeholder='请输入投保人的证件号'" placeholder="请输入被保人证件号" required  ng-minlength="4" ng-maxlength="18" >
 				</ul>
 				<!-- <div class="cell"  style="color:red" ng-show="userform.social_id.$dirty && userform.social_id.$invalid ">
 						<small class="error orange" ng-show="userform.social_id.$error.required">身份证必填</small>
